--- a/app/layout.jade
+++ b/app/layout.jade
@@ -40,7 +40,7 @@ html.no-js
                 a(href="mortgage" class="#{bodyClass=='mortgage' ? 'active' : ''}") Ипотека
               li.nav-li
                 a(href="company" class="#{bodyClass=='company' ? 'active' : ''}") Застройщик
-              li.nav-li
+              li.nav-li.nav-news
                 a(href="news" class="#{bodyClass=='news' ? 'active' : ''}") Новости
               li.nav-li
                 a(href="about#documents") Документы
