--- a/app/styles/includes/_footer.scss
+++ b/app/styles/includes/_footer.scss
@@ -1,9 +1,10 @@
 .footer {
+  min-width: $min-width;
 	height: $menu-height;
 	line-height: $menu-height;
 	background: #5e5341;
 	color: #fff;
-  	font-size: 14px;
+  font-size: 14px;
 
   	span {
   		margin-right: 40px;
