--- a/app/styles/pages/_contacts.scss
+++ b/app/styles/pages/_contacts.scss
@@ -9,7 +9,7 @@
 		.contact-block {
 			display: inline-block;
 			vertical-align: top;
-			width: 380px;
+			width: 30%;
 			margin-left: 20px;
 
 			&:first-child {
