--- a/app/about.jade
+++ b/app/about.jade
@@ -128,7 +128,7 @@ block content
         .us-title Документация
         ul.documents-ul
           li
-            a(href="uploads/docs_1.jpg") Разрешение на строиcтельство
+            a(href="uploads/docs_1.jpg") Разрешение на строительство
             span  JPG, 260 KB
           li
             a(href="uploads/docs_2.jpg") Свидетельство о праве на земельный участок
