--- a/app/layouts.jade
+++ b/app/layouts.jade
@@ -150,11 +150,13 @@ block content
 
           .layout-info
             .title КВАРТИРА ДЛЯ БОЛЬШОЙ СЕМЬИ
-            //- .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
-            .documents-ul
-              li
-                a(href="#").disabled Вариант планировки 1
-                span  PDF, 81 KB
+            .text 
+              p Данный вариант плнировки разделен на «гостевую» и «приватную» зоны. С одной стороны находятся две просторные спальни, удобная гардеробная, прилегающая к одной из спален, и детская комната. С другой — расположены большая кухня-столовая и светлая гостиная, где большая семья и гости могут собираться вечерами и устраивать застолье во время праздников. 
+              p Глава семьи оценит кабинет, где он сможет уединиться, отдыхать или работать в спокойной обстановке. Расположение комнат по периметру квартиры с единым большим холлом в центре обеспечивает прямой и простой доступ к любому помещению вашей квартиры.
+            //- .documents-ul
+            //-   li
+            //-     a(href="#").disabled Вариант планировки 1
+            //-     span  PDF, 81 KB
         .js-tab.layout-about
           .layout-map.second-var
             ul.rooms
@@ -280,20 +282,22 @@ block content
                       span м<sup>2</sup> 
           .layout-info
             .title КВАРТИРА ДЛЯ ЭСТЕТОВ
-            //- .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
-            .documents-ul
-              li
-                a(href="#").disabled Вариант планировки 2
-                span  PDF, 81 KB
+            .text
+              p Изящество и совершенство должно быть во всем. В данном варианте планировки все комнаты расположены максимально практично. Просторные помещения дают больше возможностей для оригинального дизайна-проекта. Кухня-столовая изящно разделена на зоны, а спальня образует единое органичное пространство с гардеробной. Находясь в кабинете, вы всегда можете выйти на балкон и полюбоваться прекрасными видами Ростова-на-Дону. В такой квартире вдохновение и прекрасный настрой всегда будут вашими спутниками.
+            //- .documents-ul
+            //-   li
+            //-     a(href="#").disabled Вариант планировки 2
+            //-     span  PDF, 81 KB
         .js-tab.layout-about
           .layout-map.free-var
           .layout-info
             .title СВОБОДНАЯ ПЛАНИРОВКА
-            //- .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
-            .documents-ul
-              li
-                a(href="#").disabled Свободная планировка
-                span  PDF, 81 KB
+            .text
+              p Данная планировка позволяет использовать собственный дизайн-проект, чтобы воплотить в жизнь ваши представления об идеальном доме. Мы с радостью перенесем предложенную вами идею с бумаги в реальность.
+            //- .documents-ul
+            //-   li
+            //-     a(href="#").disabled Свободная планировка
+            //-     span  PDF, 81 KB
     
     .clearfix
   
