--- a/app/styles/pages/_index.scss
+++ b/app/styles/pages/_index.scss
@@ -6,6 +6,8 @@
 	right: 0;
 	bottom: 0;
 	padding-top: $menu-height;
+	min-width: $min-width;
+	overflow: hidden;
 
 	.slider, .title {
 		position: absolute;
@@ -31,6 +33,7 @@
   			line-height: 1.4;
   			text-transform: uppercase;
   			top: 50%;
+  			left: 0;
   			width: 100%;
   			margin-top: -100px;
   			text-align: center;
@@ -39,6 +42,7 @@
 		.subs {
 			position: absolute;
 			bottom: 0;
+			left: 0;
 			top: 50%;
 			margin: 80px 0 0;
 			width: 100%;
