--- a/app/layouts.jade
+++ b/app/layouts.jade
@@ -7,7 +7,7 @@ block content
   .wrapper
     h1 Планировки
   .container.layouts-container
-    .grid_1
+    .grid_1.layout-left-grid
       .big-desc.
         <p>Каждый этаж дома представляет собой отдельную квартиру площадью 210 м2 с собственным лестнично-лифтовым холлом.</p>
         <p>Ориентация по трем сторонам света и доминирование над окружающей застройкой обеспечивает не только оптимальную инсоляцию и проветриваемость помещений, 
