--- a/app/styles/pages/_layouts.scss
+++ b/app/styles/pages/_layouts.scss
@@ -27,26 +27,29 @@
 			span {
 				display: inline-block;
 				vertical-align: top;
-				border: 4px solid transparent;
 				font-weight: 500;
 				font-size: 14px;
 				text-transform: uppercase;
 				color: #3bb9cb;
+				border: 4px solid transparent;
 				cursor: pointer;
 				height: 32px;
 				line-height: 34px;
 				padding: 0 15px;
 				transition: all .2s ease;
+				white-space: nowrap;
 
 				&:hover {
 					color: #5e533e;
 				}
 			}
 
-			&.active span {
-				color: #5e533e;
-				border-color: #5e533e;
-				cursor: pointer;
+			&.active {
+				span {
+					border-color: #5e533e;
+					cursor: default;
+					color: #5e533e;
+				}
 			} 
 		}
 	}
